# aerosdk

./: .env.example  .gitignore  Dockerfile  LEARNING_GUIDE.md  NEXT_STEPS.md  README.md  docker-compose.yml  pyproject.toml
sdk/: __init__.py  client.py  exceptions.py  models.py
server/: __init__.py  database.py  main.py  models.py  routes.py
tests/: __init__.py  test_client.py
