[project]
name = "aerosdk"
version = "0.1.0"
description = "Aerospace data processing SDK and backend"
requires-python = ">=3.11"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "psycopg2-binary==2.9.9",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.1",
    "pytest-cov==4.1.0",
    "ruff==0.1.8",
    "black==23.12.0",
    "mypy==1.7.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
